<resources>
    <string name="app_name" translatable="false">Spicefy</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="name">Name</string>
    <string name="spice_image">Spice Image</string>
    <string name="detail_name_title">Spice Name</string>
    <string name="detail_name_content">-</string>
    <string name="detail_accuracy_title">Accuracy</string>
    <string name="detail_accuracy_content">-</string>
    <string name="detail_description_title">Description</string>
    <string name="detail_description_content">-</string>
    <string name="empty_image_warning">Blank image. Please select it first</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="icon_description">success</string>
    <string name="login_successfully">Login successfully</string>
    <string name="name_must_be_filled_in">Name must be filled in</string>
    <string name="email_must_be_filled_in">Email must be filled in</string>
    <string name="password_must_be_filled_in">Password must be filled in</string>
    <string name="email_must_be_a_valid_email">Email must be a valid email</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="sorry_not_spices">Sorry!! not spices</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="descaboutapp">This spice detection app provides complete information about various types of spices in Indonesia. Using precision calculations based on spice image datasets, the app not only helps Generation Z accurately recognize spices, but also provides detailed information such as names, photos, and properties of spices. In addition, the app educates about the health benefits of spices and how to use them in healthy cooking. Through integration with online platforms, users can not only identify, but also buy or sell spices according to their needs, efficiently supporting the spice market ecosystem.</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_image_content">Please enter a spice image \nto make a classification</string>
    <string name="add_gallery_image">Add Gallery Image</string>
    <string name="add_camera_image">Add Camera Image</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account_please">Already have an account? Please </string>
    <string name="don_t_have_an_account_please">Don\'t have an account? Please </string>
    <string name="location_not_available_please_activate_your_gps">Location not available, Please activate your GPS</string>
    <string name="product_added_successfully">Product added successfully</string>
    <string name="please_fill_in_all_data">Please fill in all data</string>
    <string name="whatsapp_numbers_must_start_with_62">WhatsApp numbers must start with +62</string>
    <string name="camera_permission_not_granted">Camera permission not granted.</string>
</resources>